Bug #24399: is_subclass_of(): fix memleak, too